--- a/src/train.ipynb
+++ b/src/train.ipynb
@@ -817,8 +817,8 @@
        "\n",
        "    <div>\n",
        "      \n",
-       "      <progress value='13' max='25' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [13/25 03:23 < 03:41, 0.05 it/s, Epoch 12/25]\n",
+       "      <progress value='25' max='25' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      [25/25 07:22, Epoch 25/25]\n",
        "    </div>\n",
        "    <table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
@@ -872,6 +872,62 @@
        "      <td>11</td>\n",
        "      <td>0.233900</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <td>12</td>\n",
+       "      <td>0.155300</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>13</td>\n",
+       "      <td>0.118500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>14</td>\n",
+       "      <td>0.076400</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>15</td>\n",
+       "      <td>0.048200</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>16</td>\n",
+       "      <td>0.029200</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>17</td>\n",
+       "      <td>0.018100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>18</td>\n",
+       "      <td>0.013100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>19</td>\n",
+       "      <td>0.008800</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>20</td>\n",
+       "      <td>0.006500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>21</td>\n",
+       "      <td>0.005200</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>22</td>\n",
+       "      <td>0.004200</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>23</td>\n",
+       "      <td>0.004400</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>24</td>\n",
+       "      <td>0.002600</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>25</td>\n",
+       "      <td>0.002200</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table><p>"
       ],
@@ -881,6 +937,16 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "TrainOutput(global_step=25, training_loss=0.5731383980531245, metrics={'train_runtime': 463.9783, 'train_samples_per_second': 0.431, 'train_steps_per_second': 0.054, 'total_flos': 1831971402547200.0, 'train_loss': 0.5731383980531245, 'epoch': 25.0})"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -891,16 +957,7 @@
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/staff_homes/kboenisc/miniconda3/envs/baltasar-ai/lib/python3.10/site-packages/huggingface_hub/file_download.py:1150: FutureWarning: `resume_download` is deprecated and will be removed in version 1.0.0. Downloads always resume when possible. If you want to force a new download, use `force_download=True`.\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "model.save_pretrained('models/' + Config.FINE_TUNED_MODEL)"
    ]
@@ -974,15 +1031,7 @@
       " How can we evaluate the true value of a work or a person's talents—should we focus more on their depth and quality rather than their quantity?\n",
       "\n",
       "### Output:\n",
-      "<eos>The evaluation of a work or a person's talents requires a nuanced approach that considers both their depth and quantity. While the latter can provide a measure of superficial success, it is the former that ultimately leads to lasting impact and fulfillment.\n",
-      "\n",
-      "Baltasar Gracian, a 17th-century philosopher, eloquently argued that \"the whole of human action is founded upon two pillars: virtue and knowledge.\" He believed that true excellence lies in the combination of both, with virtue being the foundation and knowledge as its instrument.\n",
-      "\n",
-      "According to Gracian, a person's talents are like the tools they use to navigate through life. While having a plethora of tools is advantageous, it is only with wisdom and virtue that one can effectively utilize them to create something of lasting value.\n",
-      "\n",
-      "Therefore, when evaluating a work or a person's talents, it is important to consider not only their quantity but also their depth and quality. For it is the combination of both that leads to true excellence and fulfillment.\n",
-      "\n",
-      "In conclusion, while quantity of talents can provide a superficial measure of success, it is the depth and quality of one's virtues that ultimately determine their true value and impact on the world. By embracing the wisdom of individuals like Baltasar Gracian, we can learn to appreciate the intricate interplay between talent and virtue in creating a more meaningful and fulfilling life.<eos>\n"
+      "<eos>In evaluating a person or work, it is essential to consider both their depth and quality, rather than solely relying on their quantity. While quantity can be impressive, it is ultimately superficial. To truly gauge a person's talents or the quality of a work, we must delve into their innermost layers, exploring their depth and substance. Therefore, it is wiser to focus on the intrinsic worth of a thing, rather than its outward facade. In doing so, we can uncover the true treasures that lie hidden within.<eos>\n"
      ]
     }
    ],
